--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,eclipse,windows,intellij,visualstudiocode,go
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,eclipse,windows,intellij,visualstudiocode,go
 
+notes
 output
 
 ### Eclipse ###
