--- a/content/user-agents.yaml
+++ b/content/user-agents.yaml
@@ -1,8 +1,8 @@
 slug: user-agents
-title: Name Your HTTP Clients
+title: Name Your HTTP Clients (User Agents)
 thesis: Always use a descriptive User-Agent when making HTTP requests. This helps with observability, debugging, and understanding traffic patterns even when authentication fails.
 bullets:
-  - Include app name, version, environment, and region.
+  - Include attributes like app name, version, environment, and region.
   - Keep it stable so you can grep it in logs and dashboards.
   - Add a request id separately; do not overload the User-Agent.
 example: "User-Agent: myservice/1.7.3 (env=prod; region=us-east-1)"
